# omkbench

./: CMakeLists.txt  LICENSE  omk.sh  omk_config.sh
data/frontier/: omk_d2d.txt  omk_daxpy.txt  omk_h2d_d2h.txt  omk_reduction.txt  omk_scalar_mul_div.txt
okl/: kernels.okl
python/: plot.py
scripts/: frontier.sh  plot.py
src/: omem-impl.hpp  omem.cpp  omem.hpp  omk-bench.cpp  omk-impl.hpp  omk.cpp  omk.hpp
